--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ input[type=button] {
     font-size: 36px;
     background-color: #fefffa;
     color: #2791d3;
-    display: block;
+    /*display: block;*/
+    /*display: inline-block;*/
 }
 
 input[type=button].cancel {
@@ -86,14 +87,16 @@ input[type=button].operations {
     /*font-weight: 800;*/
 }
 
-table {
+.calculator-buttons {
     margin: 0 auto;
     max-width: 1200px;
     width: 100%;
 }
 
-tr {
+.calculator-row {
     display: flex;
     justify-content: space-between;
+    padding: 0;
     padding-bottom: 20px;
+    margin: 0;
 }
